Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/EnsureTypesOrderTest.out
EnsureTypesOrderTest.java:9:13: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.String[], java.lang.String)
1 error